<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/layoutMargin_item"
    android:gravity="center"
    android:orientation="horizontal"
    tools:context="android.gaad.com.shoppinglistbuilder.ItemsActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/cereals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/btnMargin_item"
            android:onClick="addCereal"
            android:text="@string/cereals" />

        <Button
            android:id="@+id/cookies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/btnMargin_item"
            android:onClick="addCookies"
            android:text="@string/cookies" />

        <Button
            android:id="@+id/rice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/btnMargin_item"
            android:onClick="addRice"
            android:text="@string/rice" />

        <Button
            android:id="@+id/carrots"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/btnMargin_item"
            android:onClick="addCarrots"
            android:text="@string/carrots" />

        <Button
            android:id="@+id/beans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/btnMargin_item"
            android:onClick="addBeans"
            android:text="@string/beans" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/cheese"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/btnMargin_item"
            android:onClick="addCheese"
            android:text="@string/cheese" />

        <Button
            android:id="@+id/apple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/btnMargin_item"
            android:onClick="addApple"
            android:text="@string/apple" />

        <Button
            android:id="@+id/peanuts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/btnMargin_item"
            android:onClick="addPeanuts"
            android:text="@string/peanuts" />

        <Button
            android:id="@+id/cashew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/btnMargin_item"
            android:onClick="addCashew"
            android:text="@string/cashew" />

        <Button
            android:id="@+id/oats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/btnMargin_item"
            android:onClick="addOats"
            android:text="Oats" />

    </LinearLayout>


</LinearLayout>
